# HxFetch

./: .gitignore  Cargo.toml  LICENSE  LOGO_GUIDE.md  README.md  openlogo_debianv2_svg_logo.rs  openlogo_debianv2_svg_logo.txt  openlogo_debianv2_svg_logo_no_bg.rs
generated_logos/: 79db35b44a83f4e8c93f469f271d775a39f9f79d_logo.rs  79db35b44a83f4e8c93f469f271d775a39f9f79d_logo.txt  79db35b44a83f4e8c93f469f271d775a39f9f79d_logo_no_bg.rs  alma_logo.rs  alma_logo.txt  alma_logo_no_bg.rs  alpine_logo.rs  alpine_logo.txt  alpine_logo_no_bg.rs  alt_logo.rs  alt_logo.txt  alt_logo_no_bg.rs  anduin_logo.rs  anduin_logo.txt  anduin_logo_no_bg.rs  antix_logo.rs  antix_logo.txt  antix_logo_no_bg.rs  arch_linux__crystal__icon_svg_logo.rs  arch_linux__crystal__icon_svg_logo.txt  arch_linux__crystal__icon_svg_logo_no_bg.rs  arch_logo.rs  arch_logo.txt  arch_logo_no_bg.rs  athena_logo.rs  athena_logo.txt  athena_logo_no_bg.rs  backbox_logo.rs  backbox_logo.txt  backbox_logo_no_bg.rs  biglinux_logo.rs  biglinux_logo.txt  biglinux_logo_no_bg.rs  bluestar_logo.rs  bluestar_logo.txt  bluestar_logo_no_bg.rs  bsdrp_logo.rs  bsdrp_logo.txt  bsdrp_logo_no_bg.rs  button_filled_colour_logo.rs  (+218 more)
src/: ascii.rs  ascii_maker.rs  config.rs  display.rs  logo.rs  logo_config.rs  main.rs  redactor.rs  security.rs  sysinfo.rs
