[package]
name = "rfetch"
version = "0.1.0"
edition = "2021"
description = "A fast, modern system information tool with 84+ ASCII art logos and built-in image-to-ASCII converter"
license = "MIT"
authors = ["HxHippy <hxhippy@gmail.com>"]
repository = "https://github.com/HxHippy/rFetch"
homepage = "https://github.com/HxHippy/rFetch"
documentation = "https://github.com/HxHippy/rFetch"
keywords = ["system-info", "neofetch", "ascii-art", "terminal", "fetch"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
sysinfo = "0.30"
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
regex = "1.10"
viuer = "0.7"
rascii_art = "0.3"
